--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,10 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/images/flutter_bird.png
+
   fonts:
     - family: Montserrat
       fonts:
